--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
 
 
-<title>test</title>
+<title>Test</title>
 
 
 </head>
@@ -11,12 +11,11 @@
 <body>
 
 <h1>Hello</h1>
+<h2>Hello</h2>
+<h3>Hello</h3>
 
-<h2>hello</h2>
 
-<h3>hhello<h3>
-
-<p>HHello<p>
+<p>Welcome!</p>
 
 </body>
 
