--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		
-		<link type="text/css" rel="stylesheet" href="css/control.css"/>
+		<link type="text/css" rel="stylesheet" href="https://watashiwacomix.github.io/control.css"/>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
