--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<ul class="menu">
 <li class="selected"></li>	
 
-<li><a href=></a></li>
+<li><a href="https://watashiwacomix.github.io/README.md">README</a></li>
 			
 <li><a href=></a>     </li>
 			
