--- a/books.html
+++ b/books.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Books</title>
-		<link type="text/css" rel="stylesheet" href="control.css"/>
+		<link type="text/css" rel="stylesheet" href="https://watashiwacomix.github.io/control.css"/>
 		<meta charset="utf-8"/>
 	</head>
 	<body>
