--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<html>
 
+
+
+
+<head>
+
+<title>Watashiwa Comix™</title>
+<link type="text/css" rel="stylesheet" href="css/control.css"/>
+<mets charset="utf-8"/>
+
+<script type="text/javascript">
+    confirm("Welcome to watashiwacomix.github.io, we hope you like it.")
+    </script>
+
+</head>
+
+
+
+
+<body>
+
+<center>
+<img src="wlogo.png" alt="Our Logo" align="middle" width="1300"/>
+</center>
+
+
+<ul class="menu">
+	<li class="selected">Home</li>
+        </ul>
+
+<h1>Watashiwa Comix</h1>
+<h2>Your (unoficial) St. Catherine's comic</h2>
+
+
+</body>
+
+</html>
