--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 
 <title>Watashiwa Comix™</title>
-<link type="text/css" rel="stylesheet" href="https://watashiwacomix.github.io/control.css"/>
+<link type="text/css" rel="stylesheet" href="css/control.css"/>
 <mets charset="utf-8"/>
 
 <script type="text/javascript">
@@ -21,16 +21,17 @@
 <body>
 
 <center>
-<img src="wlogo.png" alt="Our Logo" align="middle" width="1300"/>
+<img class="nice" src="wlogo.png" alt="Our Logo"/>
 </center>
 
 
 <ul class="menu">
 	<li class="selected">Home</li>
+	<li><a href="about.html">About</a></li>
         </ul>
 
-<h1>Watashiwa Comix</h1>
-<h2>Your (unoficial) St. Catherine's comic</h2>
+<h1 class="header" align="middle">Home</h1>
+
 
 
 </body>
