--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <center>
-<img class="nice" src="wlogo.png" alt="Our Logo"/>
+<img class="nice" src="https://cloud.githubusercontent.com/assets/15912297/11445098/4ca73a8e-9521-11e5-8df4-1e67df786307.png" alt="Our Logo"/>
 </center>
 
 
