--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <ul class="menu">
 	<li class="selected">Home</li>
-	<li><a href="about.html">About</a></li>
+	<li><a href="https://watashiwacomix.github.io">About</a></li>
         </ul>
 
 
