--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 
 <title>About</title>
-<link type="text/css" rel="stylesheet" href="css/control.css"/>
+<link type="text/css" rel="stylesheet" href="https://watashiwacomix.github.io/control.css"/>
 <meta charset="utf-8"/>
 
 </head>
