--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<img class="nice" src="wlogo.png" alt="Our Logo"/>
+<img class="nice" src="https://cloud.githubusercontent.com/assets/15912297/11445098/4ca73a8e-9521-11e5-8df4-1e67df786307.png" alt="Our Logo"/>
 
 <ul class="menu">
 	<li><a href="index.html">Home</a></li>
