--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 
@@ -6,8 +7,8 @@
 <head>
 
 <title>Watashiwa Comix™</title>
-<link type="text/css" rel="stylesheet" href="https://watashiwacomix.github.io/control.css"/>
-<mets charset="utf-8"/>
+<link type="text/css" rel="stylesheet" href="css/control.css"/>
+<meta charset="utf-8"/>
 
 <script type="text/javascript">
     confirm("Welcome to watashiwacomix.github.io, we hope you like it.")
@@ -20,17 +21,24 @@
 
 <body>
 
-<center>
-<img class="nice" src="https://cloud.githubusercontent.com/assets/15912297/11445098/4ca73a8e-9521-11e5-8df4-1e67df786307.png" alt="Our Logo"/>
-</center>
+
+<img class="nice" src="Images/wlogo.png" alt="Our Logo"/>
+
 
 
 <ul class="menu">
 	<li class="selected">Home</li>
-	<li><a href="https://watashiwacomix.github.io/about.html">About</a></li>
+	<li><a href="about.html">About</a></li>
         </ul>
 
 
+
+<center>
+	<h2>Click on the image to view our new first issue!</h2>
+	<a href="issue1pdf.html">
+	<img src="Images/Slide1.jpg" href="pdf.html" style="width: 40%"/>
+</a>
+</center>
 
 
 
