--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <head>
 
 <title>Watashiwa Comix™</title>
-<link type="text/css" rel="stylesheet" href="/control.css"/>
+<link type="text/css" rel="stylesheet" href="css/control.css"/>
 <meta charset="utf-8"/>
 
 <script type="text/javascript">
