--- a/about.html
+++ b/about.html
@@ -4,14 +4,15 @@
 <head>
 
 <title>About</title>
-<link type="text/css" rel="stylesheet" href="https://watashiwacomix.github.io/control.css"/>
+<link type="text/css" rel="stylesheet" href="css/control.css"/>
 <meta charset="utf-8"/>
 
 </head>
 
 <body>
 
-<img class="nice" src="https://cloud.githubusercontent.com/assets/15912297/11445098/4ca73a8e-9521-11e5-8df4-1e67df786307.png" alt="Our Logo"/>
+<img class="nice" src="Images/wlogo.png" alt="Our Logo"/>
+
 
 <ul class="menu">
 	<li><a href="index.html">Home</a></li>
