--- a/issue1pdf.html
+++ b/issue1pdf.html
@@ -6,7 +6,7 @@
 <head>
 
 <title>Watashiwa Comix™</title>
-<link type="text/css" rel="stylesheet" href="css/control.css"/>
+<link type="text/css" rel="stylesheet" href="/control.css"/>
 <mets charset="utf-8"/>
 
 </head>
