--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <center>
 	<h2>Click on the image to view our new first issue!</h2>
 	<a href="issue1pdf.html">
-	<img src="Images/Slide1.jpg" href="pdf.html" style="width: 40%"/>
+	<img src="https://cloud.githubusercontent.com/assets/15912297/11609483/6e3b771e-9b7f-11e5-90e7-3b58e0402cf6.jpg" href="pdf.html" style="width: 40%"/>
 </a>
 </center>
 
