--- a/issue1pdf.html
+++ b/issue1pdf.html
@@ -28,8 +28,10 @@
 
 
 <center>
+	<h2>Sometimes it takes a while to load</h2>
 <iframe src="http://docs.google.com/gview?url=https://github.com/watashiwaComix/watashiwacomix.github.io/files/50167/Watashiwa.Comix.Issue.1.pdf&embedded=true" 
 style="width:90%; height:100%;" frameborder="0"></iframe>
+<p>If that doesn't work go <a href="http://docs.google.com/gview?url=https://github.com/watashiwaComix/watashiwacomix.github.io/files/50167/Watashiwa.Comix.Issue.1.pdf&embedded=true">here</a></p>
 </center>
 
 
