--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 
 <center>
+	<article><h1>Warning, this website isn't finished</h1></article>
 	<h2>Click on the image to view our new first issue!</h2>
 	<a href="issue1pdf.html">
 	<img src="https://cloud.githubusercontent.com/assets/15912297/11609483/6e3b771e-9b7f-11e5-90e7-3b58e0402cf6.jpg" href="pdf.html" style="width: 40%"/>
